适应开发者工具的修改，选择器修改对象

--- a/src/styles/diy.scss
+++ b/src/styles/diy.scss
@@ -40,23 +40,27 @@ page {
 	--letter-spacing-btn: 6rpx;
 	--line-height-btn: 100rpx;
 
-	--height-btn: 100rpx; // diy-end
+	--height-btn: 100rpx;
 	--purple: #3f4a94;
 
+	// diy-end
 
-	// --purple: #3d4bc9;
-}
-
-// 全局
-
-// 背景底图+样式
-.uni-body uni-page-body {
+	// 背景底图+样式
 	background-image: url('@/static/img/pageBg-3.png') !important;
 	background-size: 100% 1000rpx;
 	background-repeat: no-repeat;
 	background-position: 0 0;
-	height: 100% !important;
 }
+
+// 全局
+
+// .uni-body uni-page-body {
+// 	background-image: url('@/static/img/pageBg-3.png') !important;
+// 	background-size: 100% 1000rpx;
+// 	background-repeat: no-repeat;
+// 	background-position: 0 0;
+// 	height: 100% !important;
+// }
 
 .uni-body uni-page-body>uni-view:first-child[style="padding-top: 45px;"] {
 	// padding-top:0 !important;
@@ -266,7 +270,7 @@ uni-button,
 	top: 0 !important;
 }
 
-.uni-input-input {
+input {
 	color: var(--purple);
 	font-size: 28rpx !important;
 	height: auto !important;
@@ -2533,6 +2537,7 @@ uni-textarea {
 	margin-bottom: 60rpx;
 }
 
+
 #page_forum .scroll-tabs,
 #page_article .scroll-tabs {
 	// position: absolute;
@@ -2552,6 +2557,7 @@ uni-textarea {
 	display: flex;
 	justify-content: center;
 	font-size: 28rpx;
+	flex-direction: row !important;
 	align-items: center;
 }
 
